# usvs-docking

./: .gitignore  .pylintrc  README.md  pyproject.toml
scripts/: animate_sim.py  sim_comparison.py  sim_docking.py  sim_model.py  sim_model_seacat.py  sim_model_seadragon.py  sim_mpc.py  sim_mpc_sa.py  sim_mpc_seacat.py  sim_mpc_seadragon.py  sim_nl_model.py  sim_nl_mpc.py  sim_nonlinear_model.py  sim_sl_mpc.py  sim_thrusters_response.py  sim_visualization.py  visualize_sim.py
scripts/results/: experiment-1-cooperative-no-b.pkl  experiment-1-cooperative-qref-1.pkl  experiment-1-cooperative-qref-2.pkl  experiment-1-static-usv.pkl  experiment-2-cooperative-no-b.pkl  experiment-2-cooperative-qref-1.pkl  experiment-2-cooperative-qref-2.pkl  experiment-2-static-usv.pkl
src/seacat_dp/control/: linear_mpc.py  linearize.py  ma_mpc.py  mpc.py  nonlinear_mpc.py  pid.py
src/seacat_dp/model/: disturbances.py  hydrodynamics.py  model.py  model_seacat.py  model_seadragon.py  nonlinear_model.py  parameters.py  parameters_seacat.py  parameters_seadragon.py  seacat_model.py  seacat_pars.py  seadragon_model.py  seadragon_pars.py  wind_dynamics.py
src/seacat_dp/models/: disturbances.py  nonlinear_model.py  parameters.py
src/seacat_dp/util/: io.py  noise.py  numerical_integration.py
src/seacat_dp/utils/: io.py  settings.py  settings_ma.py  settings_sa.py  transformations.py  wrappers.py
src/seacat_dp/visualization/: animate.py  plot.py  plot_functions.py  plot_ma.py
src/usvs_control/control/: linear_mpc.py  ma_mpc.py  nonlinear_mpc.py
src/usvs_control/model/: hydrodynamics.py  (+7 more)
(+11 files in other folders)
